--- a/car_service/car_service_frontend/secrets.toml
+++ b/car_service/car_service_frontend/secrets.toml
@@ -1,3 +1,6 @@
 # .streamlit/secrets.toml
 [connections.car_service_db]
-url = "postgres://quakumei:5130904%2F10002@car_service-postgre/car_service.db"
+type = "sql"
+#url = "postgresql://tampio:5130904%2F10002@localhost:5432/car_service"
+url = "postgresql://tampio:5130904%2F10002@car_service-postgres:5432/car_service"
+
