--- a/car_service/docker-compose.yml
+++ b/car_service/docker-compose.yml
@@ -123,6 +123,7 @@ services:
 
 
   car_service-cadvisor:
+    # https://dev.to/cloudx/taming-cadvisors-high-cpu-usage-1nm5
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: car_service-cadvisor
     privileged: true
@@ -134,11 +135,21 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    command:
+      - "--housekeeping_interval=30s"
+      - "--docker_only=true"
+      - "--disable_metrics=percpu,sched,tcp,udp,disk,diskIO,accelerator,hugetlb,referenced_memory,cpu_topology,resctrl"
     devices:
       - /dev/kmsg
     networks:
       - postgres
-      #  depends_on:
+    healthcheck:
+      test: wget --quiet --tries=1 --spider http://localhost:9102/healthz || exit 1
+      interval: 15s
+      timeout: 15s
+      retries: 5
+      start_period: 30s
+        #  depends_on:
       # - ["car_service-grafana", "car_service-prometheus", "car_service-backend", "car_service-pgadmin"]
       # car_service-frontend
 
