refactor: adaptation to new conditions

--- a/car_service/car_service_frontend/config.yaml
+++ b/car_service/car_service_frontend/config.yaml
@@ -5,8 +5,8 @@ credentials:
       name: Ilya Tampio 
       password: $2b$12$ByiI4veq94h3lRJwR61wpORJPmlosVb5FjmJvjgaUeZC83drqsl2q
     operator_hopkins_bob: # Sample operator
-      email: hopkins.bob@gmail.com 
-      name: Bob Hopkins
+      email: steven.hawking@gmail.com 
+      name: Steven Hawking
       password: $2b$12$.HIkx0MDkIGhfG7dIXdYFeQP1wlUO85Tdouuf3KWVElKd6uuJeN2u 
 cookie:
   expiry_days: 7
