add: better rights management

--- a/car_service/car_service_frontend/Dockerfile
+++ b/car_service/car_service_frontend/Dockerfile
@@ -5,4 +5,4 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ./secrets.toml /code/.streamlit/secrets.toml
 COPY ./app /code/app
 COPY ./config.yaml /code/config.yaml
-CMD ["streamlit", "run", "app/Home.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "app/Login.py", "--server.port=8501", "--server.address=0.0.0.0"]
