--- a/car_service/car_service_frontend/config.yaml
+++ b/car_service/car_service_frontend/config.yaml
@@ -3,15 +3,16 @@ credentials:
     sysadmin: # Notice that login is this line
       email: quakumei@gmail.com
       name: Ilya Tampio 
+      level: admin
       password: $2b$12$ByiI4veq94h3lRJwR61wpORJPmlosVb5FjmJvjgaUeZC83drqsl2q
-    operator_hopkins_bob: # Sample operator
+    steven_hawking: # Sample operator
       email: steven.hawking@gmail.com 
       name: Steven Hawking
-      password: $2b$12$.HIkx0MDkIGhfG7dIXdYFeQP1wlUO85Tdouuf3KWVElKd6uuJeN2u 
+      level: operator
+      password: $2b$12$ByiI4veq94h3lRJwR61wpORJPmlosVb5FjmJvjgaUeZC83drqsl2q
 cookie:
   expiry_days: 7
   key: "dfhkgjhdfkjghjdkhlakjsdhlfkjwhqwuqh" # Must be string
   name: car_service_authenticate
 preauthorized:
-  emails:
-  - melsby@gmail.com
+
