--- a/car_service/docker-compose.yml
+++ b/car_service/docker-compose.yml
@@ -157,7 +157,7 @@ services:
     container_name: car_service-frontend
     build: ./car_service_frontend
     working_dir: /code
-    command: streamlit run app/About.py --server.port=8501 --server.address=0.0.0.0  
+    command: streamlit run app/Login.py --server.port=8501 --server.address=0.0.0.0  
     volumes:
       - ./car_service_frontend:/code
       - ./car_service_frontend/secrets.toml:/code/.streamlit/secrets.toml
